# zhur

./: .gitignore  .ignore  Cargo.toml  README.md
apst/: Cargo.toml
apst/src/: data.rs  main.rs
common/: Cargo.toml
common/src/: apst.rs  db.rs  errors.rs  invoke.rs  ipc.rs  lib.rs
common/src/invoke/: http.rs
common/src/invoke/http/: conversions.rs
db/: Cargo.toml
db/src/: data.rs  main.rs
engine/: Cargo.toml
engine/src/: code.rs  core.rs  invoke.rs  lib.rs  main.rs
examples/: Cargo.toml  README.md
examples/counter/: Cargo.toml  README.md
examples/counter/src/: lib.rs
examples/echo/: Cargo.toml  README.md
examples/echo/src/: lib.rs
examples/echo/templates/: index.html
examples/todos/: Cargo.toml  README.md
examples/todos/src/: data.rs  lib.rs  routes.rs
gateway/: Cargo.toml
gateway/src/: conversion.rs  main.rs
ipc/: Cargo.toml
ipc/src/: client.rs  lib.rs  server.rs
portal/: Cargo.toml
portal/src/: main.rs  users.rs
portal/src/apst/: data.rs  web.rs
portal/src/users/: data.rs  web.rs
sdk/: Cargo.toml
sdk/src/: datetime.rs  db.rs  error.rs  http.rs  lib.rs  meta.rs  web.rs
shared/: Cargo.toml
shared/src/: http.rs
shared/src/http/: conversions.rs
tools/: Cargo.toml
wasm-examples/: Cargo.toml
wasm-examples/echo/: Cargo.toml
wasm-examples/echo/src/: lib.rs
wasm-examples/echo/templates/: index.html
wasm-examples/hello/: Cargo.toml
wasm-examples/hello/src/: lib.rs
wasm-examples/todos/: Cargo.toml
wasm-examples/todos/res/: index.html  index.js
wasm-examples/todos/src/: data.rs  lib.rs  router.rs  routes.rs  todo.rs
zhur_apst/: Cargo.toml  README.md
zhur_apst/src/: lib.rs  main.rs  serve.rs
zhur_common/: Cargo.toml  README.md
zhur_common/src/: lib.rs  msg.rs
zhur_common/src/msg/: chan.rs  core_apst.rs  core_kv.rs
zhur_core/: Cargo.toml  README.md
zhur_core/src/: lib.rs  main.rs  serve.rs  wasm.rs
zhur_core/src/wasm/: executor.rs  pool.rs
zhur_core/src/wasm/executor/: inner.rs
zhur_gate/: Cargo.toml  README.md
zhur_gate/src/: comms.rs  handle.rs  lib.rs  main.rs
zhur_gate/src/handle/: conversions.rs
zhur_invk/: Cargo.toml  README.md
zhur_invk/src/: err.rs  http.rs  lib.rs
zhur_kv/: Cargo.toml  README.md
zhur_kv/src/: main.rs
zhur_portal/: Cargo.toml  README.md
zhur_portal/front/: index.html
zhur_portal/front/js/: index.js  out.js  out.js.map  package-lock.json  package.json
zhur_portal/src/: main.rs
zhur_sdk/: Cargo.toml  README.md
zhur_sdk/src/: bplate.rs  lib.rs  svc.rs  web.rs
zhur_sdk/src/svc/: datetime.rs  kv.rs  meta.rs
