[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.8", features = ["derive"] }
common = { path = "../common" }
ipc = { path = "../ipc" }
serde_json = "1.0"
shared = { path = "../shared" }
simple_logger = "2.1"
wapc = "1.0"
wasm3-provider = "1.0.0"