[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.5"
common = { path = "../common" }
mime = "0.3"
ipc = { path = "../ipc" }
simple_logger = "2.1"
shared = { path = "../shared" }