[package]
name = "portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bcrypt = "0.13"
axum = "0.5"
common = { path = "../common" }
ipc = { path = "../ipc" }
serde = { version = "1.0", features = ["derive"] }
simple_logger = "2.1"
sled = "0.34"
hmac = "0.12.1"
sha2 = "0.10.2"
jwt = "0.16.0"