[package]
name = "zhur_common"
description = "Library for common Zhur server-side types and dependencies."
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
log = "0.4.13"
pretty_env_logger = "0.4.0"
flume = "0.10.1"