[package]
name = "zhur_core"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zhur_common = { path = "../zhur_common" }
zhur_invk = { path = "../zhur_invk" }
wapc = "0.10.1"
wasm3-provider = "0.0.2"
chrono = { version = "0.4.19", features = ["serde"] }