[package]
name = "zhur_portal"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.0"
sled = "0.34.6"
jsonwebtoken = "7.2.0"
validator = { version = "0.12", features = ["derive"] }
tokio = { version = "1.0.1", features = ["full"] }