[package]
name = "zhur_sdk"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = "0.4.0"
bincode = "1.3.1"
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
mime-sniffer = "0.1.2"
zhur_invk = { path = "../zhur_invk" }
chrono = { version = "0.4.19", features = ["serde"] }