[package]
name = "echo"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
zhur_sdk = { path = "../../zhur_sdk" }
askama = "0.10.5"
askama_derive = "0.10.5"