[package]
name = "todos"
version = "0.1.0"
authors = ["oreganoli <3611916+oreganoli@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
zhur_sdk = { path = "../../sdk" }
serde = {version = "1.0.22", features = ["derive"]}
serde_json = "1.0.61"